@@ -2,7 +2,7 @@
 
 THIS FILE IS MACHINE GENERATED WITH CGEN.
 
-Copyright 1996-2004 Free Software Foundation, Inc.
+Copyright 1996-2005 Free Software Foundation, Inc.
 
 This file is part of the GNU Binutils and/or GDB, the GNU debugger.
 
@@ -221,8 +221,6 @@ typedef enum isa_attr {
 
 /* Ifield support.  */
 
-extern const struct cgen_ifld cris_cgen_ifld_table[];
-
 /* Ifield attribute indices.  */
 
 /* Enum declaration for cgen_ifld attrs.  */
@@ -325,6 +323,8 @@ typedef enum cgen_insn_attr {
 
 /* cgen.h uses things we just defined.  */
 #include "opcode/cgen.h"
+
+extern const struct cgen_ifld cris_cgen_ifld_table[];
 
 /* Attributes.  */
 extern const CGEN_ATTR_TABLE cris_cgen_hardware_attr_table[];
